Fix IE11 development build errors and some layout issues (#1113)
* IE11 does not support .contains on svg elements

* Fix sidebar icons size

* Fix ie11 runtime errors

* Clean up

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -1,5 +1,12 @@
 @import './variables.scss';
 
+main {
+  /**
+   * IE11 does not support the main tag, the following line makes it styleable
+   */
+  display: block;
+}
+
 .container {
   display: flex;
   flex-direction: column-reverse;
